; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_network_selfuncs.c_inet_opr_codenum.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_network_selfuncs.c_inet_opr_codenum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"unrecognized operator %u for inet selectivity\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @inet_opr_codenum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @inet_opr_codenum(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %10 [
    i32 128, label %5
    i32 129, label %6
    i32 132, label %7
    i32 131, label %8
    i32 130, label %9
  ]

5:                                                ; preds = %1
  store i32 -2, i32* %2, align 4
  br label %15

6:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %15

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %15

8:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %15

9:                                                ; preds = %1
  store i32 2, i32* %2, align 4
  br label %15

10:                                               ; preds = %1
  %11 = load i32, i32* @ERROR, align 4
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @elog(i32 %11, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i32 %12)
  br label %14

14:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %15

15:                                               ; preds = %14, %9, %8, %7, %6, %5
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @elog(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
